Activities text alignment corrections

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2823,7 +2823,12 @@ span.counter {
   line-height: 10px;
 }
 
-.mobile-nav > ul li.menu-item-has-children.menu-item-has-children.active ul.sub-menu li a:before {
+.mobile-nav
+  > ul
+  li.menu-item-has-children.menu-item-has-children.active
+  ul.sub-menu
+  li
+  a:before {
   content: '';
   width: 6px;
   height: 6px;
@@ -4592,6 +4597,18 @@ span.counter {
   .about-how-it-works .plans {
     height: 480px;
     /* background: red; */
+  }
+  .twop {
+    font-size: 18px;
+    color: red;
+    text-align: justify;
+    margin: 0;
+    padding: 0;
+    white-space: normal;
+    word-break: break-all;
+    line-height: 1.5;
+    word-spacing: 0.5px;
+    hyphens: auto;
   }
 }
 @media screen and (max-width: 380px) {
